--- a/templates/chat.html
+++ b/templates/chat.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js" integrity="sha256-rVL8VAaAlF/nVJwPGxEmtUAp3X6yX4zisHmmJCyAcBE=" crossorigin="anonymous"></script>
     <script src="/static/js/chat.js"></script>
 </body>
 </html>
